--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -48,6 +48,7 @@
       <![CDATA[
 1.0.0 Initial release
 1.0.1 Bugfix in check for http status code of response.
+1.1.0 Add transaction support through TransactionalAttribute
       ]]>
     </PackageReleaseNotes>
 
