--- a/src/PPWCode.Host.Core.WebApi/PPWCode.Host.Core.WebApi.csproj
+++ b/src/PPWCode.Host.Core.WebApi/PPWCode.Host.Core.WebApi.csproj
@@ -21,15 +21,16 @@
   <ItemGroup>
     <!-- PPWCode -->
     <PackageReference Include="PPWCode.API.Core" Version="1.0.0" />
+    <PackageReference Include="PPWCode.Server.Core" Version="1.1.0" />
 
     <!-- Castle Windsor -->
-    <PackageReference Include="Castle.Windsor" Version="5.1.0" />
+    <PackageReference Include="Castle.Windsor" Version="5.1.1" />
 
     <!-- NHibernate -->
-    <PackageReference Include="NHibernate" Version="5.3.5" />
+    <PackageReference Include="NHibernate" Version="5.3.10" />
 
     <!-- Others -->
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
 
     <!-- SourceLink -->
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
