--- a/src/PPWCode.Host.Core.WebApi/PPWCode.Host.Core.WebApi.csproj
+++ b/src/PPWCode.Host.Core.WebApi/PPWCode.Host.Core.WebApi.csproj
@@ -20,8 +20,8 @@
 
   <ItemGroup>
     <!-- PPWCode -->
-    <PackageReference Include="PPWCode.API.Core" Version="1.0.0" />
-    <PackageReference Include="PPWCode.Server.Core" Version="1.1.0" />
+    <PackageReference Include="PPWCode.API.Core" Version="[1.1.0-rc010026, 2)" />
+    <PackageReference Include="PPWCode.Server.Core" Version="[1.2.0-rc010063, 2)" />
 
     <!-- Castle Windsor -->
     <PackageReference Include="Castle.Windsor" Version="5.1.1" />
