--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -84,7 +84,7 @@
 1.0.0 Initial release
 1.0.1 Bugfix in check for http status code of response.
 1.1.0 Add transaction support through TransactionalAttribute
-1.2.0 Target .net core 3.1 & .net 6.0
+1.2.0 Target .net core 3.1, .net 5.0, .net 6.0
       ]]>
     </PackageReleaseNotes>
 
