--- a/src/PPWCode.Host.Core.WebApi/PPWCode.Host.Core.WebApi.csproj
+++ b/src/PPWCode.Host.Core.WebApi/PPWCode.Host.Core.WebApi.csproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <!-- PPWCode -->
     <PackageReference Include="PPWCode.API.Core" Version="[1.1.0, 2)" />
-    <PackageReference Include="PPWCode.Server.Core" Version="[1.2.0-rc010064, 2)" />
+    <PackageReference Include="PPWCode.Server.Core" Version="[1.2.0, 2)" />
 
     <!-- Castle Windsor -->
     <PackageReference Include="Castle.Windsor" Version="5.1.1" />
