--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -87,6 +87,11 @@
 1.2.0 Target .net core 3.1, .net 5.0, .net 6.0
 1.2.1 Upgrade to stable version PPWCode.Server.Core
 1.3.0 Upgrading dependencies
+2.0.0 Fix faults introduced when using Asp.Net Core in special cases
+ * fix: sometimes a Db transaction was committed after sending the request to the client
+ * fix: sometimes a Db constraints wasn't translated properly to the correct payload
+ * improvement: filters can now be used as intended, using AddService<>
+ * improvement: a IoC scope is now created using a specific middleware
       ]]>
     </PackageReleaseNotes>
 
